# 2025-Noskov-TimeSeriesCourse

./: README.md  pyproject.toml
practice/01 Basics/: 01 Basics.ipynb  slides.md
practice/01 Basics/modules/: classification.py  clustering.py  image_converter.py  metrics.py  pairwise_distance.py  plots.py
