[project]
name = "tsc"
version = "0.0.1"
description = "TimeSeriesCourse by @noartem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imutils>=0.5.4",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sktime>=0.38.5",
]
